--- a/index.html
+++ b/index.html
@@ -102,6 +102,52 @@
         </section>
 
 
+        <!-- why choose us section -->
+
+        <section class="background-color-2">
+            
+            <div class="choose max-width">
+                <h1 class="section-title">Why Choose TechWave</h1>
+                
+                <div class="choose-container">
+                    <div class="choose-container-1 choose-container-info">
+                        <img src="./assets/headphone.png" alt="">
+                        <h1>Premium Audio Quality</h1>
+                        <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms.</p>
+
+                    </div>
+                    <div class="choose-container-2 choose-container-info">
+                        <img src="./assets/device.png" alt="">
+                        <h1>Mobile Friendly</h1>
+                        <p>Listen on the go with seamless mobile experience and offline downloads.</p>
+
+                    </div>
+                    <div class="choose-container-3 choose-container-info">
+                        <img src="./assets/location.png" alt="">
+                        <h1>Global Community</h1>
+                        <p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
+
+                    </div>
+                    <div class="choose-container-4 choose-container-info">
+                        <img src="./assets/zap-fast.png" alt="">
+                        <h1>Exclusive Interviews</h1>
+                        <p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.</p>
+
+                    </div>
+                    <div class="choose-container-5 choose-container-info">
+                        <img src="./assets/resource.png" alt="">
+                        <h1>Rich Resources</h1>
+                        <p>Access show notes, transcripts, and additional learning materials for every episode.</p>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
+
+
     </main>
 
     <footer>
