--- a/index.html
+++ b/index.html
@@ -205,6 +205,44 @@
         </section>
 
 
+        <!-- Host Section -->
+
+        <section class="host-main background-color-1">
+            <h1 class="section-title">Meet the Host</h1>
+           <div class="host max-width">
+                
+                <div class="host-image">
+                    <img src="./assets/host.png" alt="">
+
+                </div>
+                <div class="host-content">
+                    <h1>Alex Kumar</h1>
+                    <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
+                    <div class="host-icon">
+                        <div class="host-icon-main">
+                            <img src="./assets/linkedin.png" alt="">
+                        </div>
+                        <div class="host-icon-main">
+                            <img src="./assets/x.png" alt="">
+                        </div>
+                        <div class="host-icon-main">
+                            <img src="./assets/instagram.png" alt="">
+                        </div>
+                        <div class="host-icon-main">
+                            <img src="./assets/youtube.png" alt="">
+                        </div>
+                    <!-- <img src="./assets/linkedin.png" alt="">
+                    <img src="./assets/x.png" alt="">
+                    <img src="./assets/instagram.png" alt="">
+                    <img src="./assets/youtube.png" alt=""> -->
+                    </div>
+
+                </div>
+           </div>
+        </section>
+        
+
+
     </main>
 
     <footer>
