responsive issue fix

--- a/index.html
+++ b/index.html
@@ -252,19 +252,19 @@
                 <img src="./assets/footerlogo.png" alt="">
             </div>
             <div class="footer-icon">
-                <div class="footer-icon-content">
+                <div class="footer-icon-content footer-icon-1">
                     <img src="./assets/spotify.png" alt="">
                     <p>Spotify</p>
                 </div>
-                <div class="footer-icon-content">
+                <div class="footer-icon-content footer-icon-2">
                     <img src="./assets/apple-podcast.png" alt="">
                     <p>Apple Podcasts</p>
                 </div>
-                <div class="footer-icon-content">
+                <div class="footer-icon-content footer-icon-3">
                     <img src="./assets/youtube-podcast.png" alt="">
                     <p>Youtube</p>
                 </div>
-                <div class="footer-icon-content">
+                <div class="footer-icon-content footer-icon-4">
                     <img src="./assets/twitter.png" alt="">
                     <p>Twitter</p>
                 </div>
