--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <main>
 
-        <section class="banner">
+        <section class="banner fade fade-1">
             <div class="banner-main">
                 <div>
                     <img src="./assets/hero-circle.png" class="center-img" alt="">
@@ -67,7 +67,7 @@
 
 
         <!-- about section -->
-        <section class="about background-color-1">
+        <section class="about background-color-1 fade fade-2">
             <div class="about-content max-width">
                 <h1>About The Podcast</h1>
                 <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.
@@ -104,7 +104,7 @@
 
         <!-- why choose us section -->
 
-        <section class="background-color-2">
+        <section class="background-color-2 fade fade-3">
             
             <div class="choose max-width">
                 <h1 class="section-title">Why Choose TechWave</h1>
@@ -149,7 +149,7 @@
 
         <!-- featured episode section -->
 
-        <section class="background-color-1">
+        <section class="background-color-1 fade fade-4">
            <div class="featured max-width">
                 <h1 class="section-title">Featured Episodes</h1>
 
@@ -207,7 +207,7 @@
 
         <!-- Host Section -->
 
-        <section class="host-main background-color-1">
+        <section class="host-main background-color-1 fade fade-5">
             <h1 class="section-title">Meet the Host</h1>
            <div class="host max-width">
                 
@@ -245,7 +245,7 @@
 
     </main>
 
-    <footer>
+    <footer class="fade fade-6">
 
         <section class="footer-main max-width">
             <div class="footer-logo">
